fix clear button align

--- a/src/ui-kit/Input/Input.module.scss
+++ b/src/ui-kit/Input/Input.module.scss
@@ -79,7 +79,7 @@
   align-items: center;
   justify-content: center;
   border-radius: 0.25rem;
-  top: 0.36rem;
+  top: 0.45rem;
 
   &:hover {
     background: rgba($grey, .5);
